# AgenticAI-chatbot

./: .env.example  README.md  env_example.txt  example.py  pyproject.toml
bio/: self_intro.txt
src/chatbot/: __init__.py
src/chatbot/core/: config.py
src/chatbot/fileParser/: parser.py
src/chatbot/services/: ChatService.py  EvaluatorService.py  UserProfileService.py
src/chatbot/utils/: prompt.py
