[project]
name = "chatbot"
version = "0.1.0"
description = "Agentic AI chatbot"
readme = "README.md"
authors = [
    { name = "Santosh Shrestha", email = "iam@santoshsth.com.np" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
chatbot = "chatbot:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
